--- a/purebutter/products/templates/products/product.html
+++ b/purebutter/products/templates/products/product.html
@@ -4,7 +4,20 @@
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
-<body>
+    <body>
+        <div class="to_sub">
+            <p>Nom : {{ selected_product.name }}</p>
+            <p>Note nutritionnelle : {{ selected_product.nutrition_grade }}</p>
+            <p>Catégorie : {{ selected_product.category }}</p>
+            <img src="{{ selected_product.thumb_link }}" />
+        </div>
+        <div class="sub">
+            <p>Nom : {{ substitute.name }}</p>
+            <p>Note nutritionnelle : {{ substitute.nutrition_grade }}</p>
+            <p>Catégorie : {{ substitute.category }}</p>
+            <img src="{{ substitute.thumb_link }}" />
+        </div>
+        <a href="{% url 'home' %}">Retour à l'accueil</a>
 
-</body>
+    </body>
 </html>
