Implementing favorite system

--- a/purebutter/products/templates/products/product.html
+++ b/purebutter/products/templates/products/product.html
@@ -4,9 +4,17 @@
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
-    <body>
+        {% if user.is_authenticated %}
+         <form action="{% url 'add_favorite' %}" method="post">
+            {% csrf_token %}
+            <input type="hidden" name="to_substitute" value="{{ selected_product.id }}">
+            <input type="hidden" name="substitution" value="{{ substitute.id }}">
+            <input type="submit" name="Save" value="Save in favorites">
+         </form>
+        {% endif %}
+
         <div class="to_sub">
-            <p>Nom : {{ selected_product.name }}</p>
+            <p>Nom : {{ selected_product.name }} </p>
             <p>Note nutritionnelle : {{ selected_product.nutrition_grade }}</p>
             <p>Catégorie : {{ selected_product.category }}</p>
             <img src="{{ selected_product.thumb_link }}" />
