--- a/purebutter/home/templates/home/home.html
+++ b/purebutter/home/templates/home/home.html
@@ -11,7 +11,7 @@
          $(function() {
             $( "#id_research" ).autocomplete({
                source: "{% url 'autocomplete' %}",
-               minLength: 2
+               minLength: 1
             });
          });
       </script>
@@ -19,6 +19,7 @@
 <body>
     <div id="user">
         {% if request.user.is_authenticated %}
+            <a href="{% url 'fav_list' %}">Go to favorite list</a><br>
             <a href="{% url 'logout' %}">Log out</a>
         {% else %}
             <a href="{% url 'signin' %}">Sign In</a><br>
