--- a/purebutter/home/templates/base.html
+++ b/purebutter/home/templates/base.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <link href = "https://code.jquery.com/ui/1.10.4/themes/ui-lightness/jquery-ui.css" rel = "stylesheet">
+    <link href="https://code.jquery.com/ui/1.10.4/themes/ui-lightness/jquery-ui.css" rel="stylesheet">
 </head>
 <body>
     {% block header %}
@@ -26,7 +26,7 @@
         <script src = "https://code.jquery.com/ui/1.10.4/jquery-ui.js"></script>
         <script>
              $(function() {
-                $( ".id_research" ).autocomplete({
+                $(".autocomplete").autocomplete({
                    source: "{% url 'autocomplete' %}",
                    minLength: 1
                 });
