--- a/purebutter/products/templates/products/product.html
+++ b/purebutter/products/templates/products/product.html
@@ -1,14 +1,11 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-        <div class="product">
-            <p>Nom : {{ prod.name }} </p>
-            <p>Note nutritionnelle : {{ prod.nutrition_grade }}</p>
-            <p>Catégorie : {{ prod.category }}</p>
-            <img src="{{ prod.thumb_link }}" />
-
-    </body>
-</html>
+{% extends "home/index.html" %}
+{% block background %}background-image:url({{ prod.thumb_link }});background-color:black;background-repeat:no-repeat;background-size:contain
+{% endblock %}
+{% block homeblock %}
+    <h1 class="text-uppercase text-white font-weight-bold">{{ prod.name }}</h1>
+{% endblock %}
+{% block form %}{% endblock %}
+{% block content %}
+    <p>Note nutritionnelle : {{ prod.nutrition_grade }}</p>
+    <p>Catégorie : {{ prod.category }}</p>
+{% endblock %}
