--- a/purebutter/home/static/home/css/creative.css
+++ b/purebutter/home/static/home/css/creative.css
@@ -16,7 +16,7 @@
   --purple: #6f42c1;
   --pink: #e83e8c;
   --red: #dc3545;
-  --orange: #f4811a;
+  --orange: #c45525;
   --yellow: #ffc107;
   --green: #28a745;
   --teal: #20c997;
@@ -24,7 +24,7 @@
   --white: #fff;
   --gray: #6c757d;
   --gray-dark: #343a40;
-  --primary: #f4811a;
+  --primary: #c45525;
   --secondary: #6c757d;
   --success: #28a745;
   --info: #17a2b8;
@@ -161,13 +161,13 @@ sup {
 }
 
 a {
-  color: #f4811a;
+  color: #c45525;
   text-decoration: none;
   background-color: transparent;
 }
 
 a:hover {
-  color: #b95c09;
+  color: #843919;
   text-decoration: underline;
 }
 
@@ -1727,23 +1727,23 @@ pre code {
 .table-primary,
 .table-primary > th,
 .table-primary > td {
-  background-color: #fcdcbf;
+  background-color: #eecfc2;
 }
 
 .table-primary th,
 .table-primary td,
 .table-primary thead th,
 .table-primary tbody + tbody {
-  border-color: #f9bd88;
+  border-color: #e0a78e;
 }
 
 .table-hover .table-primary:hover {
-  background-color: #fbcfa7;
+  background-color: #e8bfae;
 }
 
 .table-hover .table-primary:hover > td,
 .table-hover .table-primary:hover > th {
-  background-color: #fbcfa7;
+  background-color: #e8bfae;
 }
 
 .table-secondary,
@@ -2044,10 +2044,10 @@ pre code {
 .form-control:focus {
   color: #495057;
   background-color: #fff;
-  border-color: #fac494;
+  border-color: #e7a081;
   outline: 0;
-  -webkit-box-shadow: 0 0 0 0.2rem rgba(244, 129, 26, 0.25);
-  box-shadow: 0 0 0 0.2rem rgba(244, 129, 26, 0.25);
+  -webkit-box-shadow: 0 0 0 0.2rem rgba(196, 85, 37, 0.25);
+  box-shadow: 0 0 0 0.2rem rgba(196, 85, 37, 0.25);
 }
 
 .form-control::-webkit-input-placeholder {
@@ -2600,8 +2600,8 @@ textarea.form-control {
 
 .btn:focus, .btn.focus {
   outline: 0;
-  -webkit-box-shadow: 0 0 0 0.2rem rgba(244, 129, 26, 0.25);
-  box-shadow: 0 0 0 0.2rem rgba(244, 129, 26, 0.25);
+  -webkit-box-shadow: 0 0 0 0.2rem rgba(196, 85, 37, 0.25);
+  box-shadow: 0 0 0 0.2rem rgba(196, 85, 37, 0.25);
 }
 
 .btn.disabled, .btn:disabled {
@@ -2614,39 +2614,39 @@ fieldset:disabled a.btn {
 }
 
 .btn-primary {
-  color: #212529;
-  background-color: #f4811a;
-  border-color: #f4811a;
+  color: #fff;
+  background-color: #c45525;
+  border-color: #c45525;
 }
 
 .btn-primary:hover {
   color: #fff;
-  background-color: #dd6e0b;
-  border-color: #d1680a;
+  background-color: #a4471f;
+  border-color: #99421d;
 }
 
 .btn-primary:focus, .btn-primary.focus {
-  -webkit-box-shadow: 0 0 0 0.2rem rgba(212, 115, 28, 0.5);
-  box-shadow: 0 0 0 0.2rem rgba(212, 115, 28, 0.5);
+  -webkit-box-shadow: 0 0 0 0.2rem rgba(205, 111, 70, 0.5);
+  box-shadow: 0 0 0 0.2rem rgba(205, 111, 70, 0.5);
 }
 
 .btn-primary.disabled, .btn-primary:disabled {
-  color: #212529;
-  background-color: #f4811a;
-  border-color: #f4811a;
+  color: #fff;
+  background-color: #c45525;
+  border-color: #c45525;
 }
 
 .btn-primary:not(:disabled):not(.disabled):active, .btn-primary:not(:disabled):not(.disabled).active,
 .show > .btn-primary.dropdown-toggle {
   color: #fff;
-  background-color: #d1680a;
-  border-color: #c56209;
+  background-color: #99421d;
+  border-color: #8e3e1b;
 }
 
 .btn-primary:not(:disabled):not(.disabled):active:focus, .btn-primary:not(:disabled):not(.disabled).active:focus,
 .show > .btn-primary.dropdown-toggle:focus {
-  -webkit-box-shadow: 0 0 0 0.2rem rgba(212, 115, 28, 0.5);
-  box-shadow: 0 0 0 0.2rem rgba(212, 115, 28, 0.5);
+  -webkit-box-shadow: 0 0 0 0.2rem rgba(205, 111, 70, 0.5);
+  box-shadow: 0 0 0 0.2rem rgba(205, 111, 70, 0.5);
 }
 
 .btn-secondary {
@@ -2902,37 +2902,37 @@ fieldset:disabled a.btn {
 }
 
 .btn-outline-primary {
-  color: #f4811a;
-  border-color: #f4811a;
+  color: #c45525;
+  border-color: #c45525;
 }
 
 .btn-outline-primary:hover {
-  color: #212529;
-  background-color: #f4811a;
-  border-color: #f4811a;
+  color: #fff;
+  background-color: #c45525;
+  border-color: #c45525;
 }
 
 .btn-outline-primary:focus, .btn-outline-primary.focus {
-  -webkit-box-shadow: 0 0 0 0.2rem rgba(244, 129, 26, 0.5);
-  box-shadow: 0 0 0 0.2rem rgba(244, 129, 26, 0.5);
+  -webkit-box-shadow: 0 0 0 0.2rem rgba(196, 85, 37, 0.5);
+  box-shadow: 0 0 0 0.2rem rgba(196, 85, 37, 0.5);
 }
 
 .btn-outline-primary.disabled, .btn-outline-primary:disabled {
-  color: #f4811a;
+  color: #c45525;
   background-color: transparent;
 }
 
 .btn-outline-primary:not(:disabled):not(.disabled):active, .btn-outline-primary:not(:disabled):not(.disabled).active,
 .show > .btn-outline-primary.dropdown-toggle {
-  color: #212529;
-  background-color: #f4811a;
-  border-color: #f4811a;
+  color: #fff;
+  background-color: #c45525;
+  border-color: #c45525;
 }
 
 .btn-outline-primary:not(:disabled):not(.disabled):active:focus, .btn-outline-primary:not(:disabled):not(.disabled).active:focus,
 .show > .btn-outline-primary.dropdown-toggle:focus {
-  -webkit-box-shadow: 0 0 0 0.2rem rgba(244, 129, 26, 0.5);
-  box-shadow: 0 0 0 0.2rem rgba(244, 129, 26, 0.5);
+  -webkit-box-shadow: 0 0 0 0.2rem rgba(196, 85, 37, 0.5);
+  box-shadow: 0 0 0 0.2rem rgba(196, 85, 37, 0.5);
 }
 
 .btn-outline-secondary {
@@ -3175,12 +3175,12 @@ fieldset:disabled a.btn {
 
 .btn-link {
   font-weight: 400;
-  color: #f4811a;
+  color: #c45525;
   text-decoration: none;
 }
 
 .btn-link:hover {
-  color: #b95c09;
+  color: #843919;
   text-decoration: underline;
 }
 
@@ -3479,7 +3479,7 @@ input[type="button"].btn-block {
 .dropdown-item.active, .dropdown-item:active {
   color: #fff;
   text-decoration: none;
-  background-color: #f4811a;
+  background-color: #c45525;
 }
 
 .dropdown-item.disabled, .dropdown-item:disabled {
@@ -3867,23 +3867,23 @@ input[type="button"].btn-block {
 
 .custom-control-input:checked ~ .custom-control-label::before {
   color: #fff;
-  border-color: #f4811a;
-  background-color: #f4811a;
+  border-color: #c45525;
+  background-color: #c45525;
 }
 
 .custom-control-input:focus ~ .custom-control-label::before {
-  -webkit-box-shadow: 0 0 0 0.2rem rgba(244, 129, 26, 0.25);
-  box-shadow: 0 0 0 0.2rem rgba(244, 129, 26, 0.25);
+  -webkit-box-shadow: 0 0 0 0.2rem rgba(196, 85, 37, 0.25);
+  box-shadow: 0 0 0 0.2rem rgba(196, 85, 37, 0.25);
 }
 
 .custom-control-input:focus:not(:checked) ~ .custom-control-label::before {
-  border-color: #fac494;
+  border-color: #e7a081;
 }
 
 .custom-control-input:not(:disabled):active ~ .custom-control-label::before {
   color: #fff;
-  background-color: #fcdfc4;
-  border-color: #fcdfc4;
+  background-color: #efc0ac;
+  border-color: #efc0ac;
 }
 
 .custom-control-input:disabled ~ .custom-control-label {
@@ -3933,8 +3933,8 @@ input[type="button"].btn-block {
 }
 
 .custom-checkbox .custom-control-input:indeterminate ~ .custom-control-label::before {
-  border-color: #f4811a;
-  background-color: #f4811a;
+  border-color: #c45525;
+  background-color: #c45525;
 }
 
 .custom-checkbox .custom-control-input:indeterminate ~ .custom-control-label::after {
@@ -3942,11 +3942,11 @@ input[type="button"].btn-block {
 }
 
 .custom-checkbox .custom-control-input:disabled:checked ~ .custom-control-label::before {
-  background-color: rgba(244, 129, 26, 0.5);
+  background-color: rgba(196, 85, 37, 0.5);
 }
 
 .custom-checkbox .custom-control-input:disabled:indeterminate ~ .custom-control-label::before {
-  background-color: rgba(244, 129, 26, 0.5);
+  background-color: rgba(196, 85, 37, 0.5);
 }
 
 .custom-radio .custom-control-label::before {
@@ -3958,7 +3958,7 @@ input[type="button"].btn-block {
 }
 
 .custom-radio .custom-control-input:disabled:checked ~ .custom-control-label::before {
-  background-color: rgba(244, 129, 26, 0.5);
+  background-color: rgba(196, 85, 37, 0.5);
 }
 
 .custom-switch {
@@ -3999,7 +3999,7 @@ input[type="button"].btn-block {
 }
 
 .custom-switch .custom-control-input:disabled:checked ~ .custom-control-label::before {
-  background-color: rgba(244, 129, 26, 0.5);
+  background-color: rgba(196, 85, 37, 0.5);
 }
 
 .custom-select {
@@ -4022,10 +4022,10 @@ input[type="button"].btn-block {
 }
 
 .custom-select:focus {
-  border-color: #fac494;
+  border-color: #e7a081;
   outline: 0;
-  -webkit-box-shadow: 0 0 0 0.2rem rgba(244, 129, 26, 0.25);
-  box-shadow: 0 0 0 0.2rem rgba(244, 129, 26, 0.25);
+  -webkit-box-shadow: 0 0 0 0.2rem rgba(196, 85, 37, 0.25);
+  box-shadow: 0 0 0 0.2rem rgba(196, 85, 37, 0.25);
 }
 
 .custom-select:focus::-ms-value {
@@ -4082,9 +4082,9 @@ input[type="button"].btn-block {
 }
 
 .custom-file-input:focus ~ .custom-file-label {
-  border-color: #fac494;
-  -webkit-box-shadow: 0 0 0 0.2rem rgba(244, 129, 26, 0.25);
-  box-shadow: 0 0 0 0.2rem rgba(244, 129, 26, 0.25);
+  border-color: #e7a081;
+  -webkit-box-shadow: 0 0 0 0.2rem rgba(196, 85, 37, 0.25);
+  box-shadow: 0 0 0 0.2rem rgba(196, 85, 37, 0.25);
 }
 
 .custom-file-input:disabled ~ .custom-file-label {
@@ -4147,16 +4147,16 @@ input[type="button"].btn-block {
 }
 
 .custom-range:focus::-webkit-slider-thumb {
-  -webkit-box-shadow: 0 0 0 1px #fff, 0 0 0 0.2rem rgba(244, 129, 26, 0.25);
-  box-shadow: 0 0 0 1px #fff, 0 0 0 0.2rem rgba(244, 129, 26, 0.25);
+  -webkit-box-shadow: 0 0 0 1px #fff, 0 0 0 0.2rem rgba(196, 85, 37, 0.25);
+  box-shadow: 0 0 0 1px #fff, 0 0 0 0.2rem rgba(196, 85, 37, 0.25);
 }
 
 .custom-range:focus::-moz-range-thumb {
-  box-shadow: 0 0 0 1px #fff, 0 0 0 0.2rem rgba(244, 129, 26, 0.25);
+  box-shadow: 0 0 0 1px #fff, 0 0 0 0.2rem rgba(196, 85, 37, 0.25);
 }
 
 .custom-range:focus::-ms-thumb {
-  box-shadow: 0 0 0 1px #fff, 0 0 0 0.2rem rgba(244, 129, 26, 0.25);
+  box-shadow: 0 0 0 1px #fff, 0 0 0 0.2rem rgba(196, 85, 37, 0.25);
 }
 
 .custom-range::-moz-focus-outer {
@@ -4167,7 +4167,7 @@ input[type="button"].btn-block {
   width: 1rem;
   height: 1rem;
   margin-top: -0.25rem;
-  background-color: #f4811a;
+  background-color: #c45525;
   border: 0;
   border-radius: 1rem;
   -webkit-transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, -webkit-box-shadow 0.15s ease-in-out;
@@ -4186,7 +4186,7 @@ input[type="button"].btn-block {
 }
 
 .custom-range::-webkit-slider-thumb:active {
-  background-color: #fcdfc4;
+  background-color: #efc0ac;
 }
 
 .custom-range::-webkit-slider-runnable-track {
@@ -4202,7 +4202,7 @@ input[type="button"].btn-block {
 .custom-range::-moz-range-thumb {
   width: 1rem;
   height: 1rem;
-  background-color: #f4811a;
+  background-color: #c45525;
   border: 0;
   border-radius: 1rem;
   -webkit-transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, -webkit-box-shadow 0.15s ease-in-out;
@@ -4221,7 +4221,7 @@ input[type="button"].btn-block {
 }
 
 .custom-range::-moz-range-thumb:active {
-  background-color: #fcdfc4;
+  background-color: #efc0ac;
 }
 
 .custom-range::-moz-range-track {
@@ -4240,7 +4240,7 @@ input[type="button"].btn-block {
   margin-top: 0;
   margin-right: 0.2rem;
   margin-left: 0.2rem;
-  background-color: #f4811a;
+  background-color: #c45525;
   border: 0;
   border-radius: 1rem;
   -webkit-transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, -webkit-box-shadow 0.15s ease-in-out;
@@ -4258,7 +4258,7 @@ input[type="button"].btn-block {
 }
 
 .custom-range::-ms-thumb:active {
-  background-color: #fcdfc4;
+  background-color: #efc0ac;
 }
 
 .custom-range::-ms-track {
@@ -4390,7 +4390,7 @@ input[type="button"].btn-block {
 .nav-pills .nav-link.active,
 .nav-pills .show > .nav-link {
   color: #fff;
-  background-color: #f4811a;
+  background-color: #c45525;
 }
 
 .nav-fill .nav-item {
@@ -5183,14 +5183,14 @@ input[type="button"].btn-block {
   padding: 0.5rem 0.75rem;
   margin-left: -1px;
   line-height: 1.25;
-  color: #f4811a;
+  color: #c45525;
   background-color: #fff;
   border: 1px solid #dee2e6;
 }
 
 .page-link:hover {
   z-index: 2;
-  color: #b95c09;
+  color: #843919;
   text-decoration: none;
   background-color: #e9ecef;
   border-color: #dee2e6;
@@ -5199,8 +5199,8 @@ input[type="button"].btn-block {
 .page-link:focus {
   z-index: 2;
   outline: 0;
-  -webkit-box-shadow: 0 0 0 0.2rem rgba(244, 129, 26, 0.25);
-  box-shadow: 0 0 0 0.2rem rgba(244, 129, 26, 0.25);
+  -webkit-box-shadow: 0 0 0 0.2rem rgba(196, 85, 37, 0.25);
+  box-shadow: 0 0 0 0.2rem rgba(196, 85, 37, 0.25);
 }
 
 .page-item:first-child .page-link {
@@ -5217,8 +5217,8 @@ input[type="button"].btn-block {
 .page-item.active .page-link {
   z-index: 1;
   color: #fff;
-  background-color: #f4811a;
-  border-color: #f4811a;
+  background-color: #c45525;
+  border-color: #c45525;
 }
 
 .page-item.disabled .page-link {
@@ -5304,19 +5304,19 @@ a.badge:hover, a.badge:focus {
 }
 
 .badge-primary {
-  color: #212529;
-  background-color: #f4811a;
+  color: #fff;
+  background-color: #c45525;
 }
 
 a.badge-primary:hover, a.badge-primary:focus {
-  color: #212529;
-  background-color: #d1680a;
+  color: #fff;
+  background-color: #99421d;
 }
 
 a.badge-primary:focus, a.badge-primary.focus {
   outline: 0;
-  -webkit-box-shadow: 0 0 0 0.2rem rgba(244, 129, 26, 0.5);
-  box-shadow: 0 0 0 0.2rem rgba(244, 129, 26, 0.5);
+  -webkit-box-shadow: 0 0 0 0.2rem rgba(196, 85, 37, 0.5);
+  box-shadow: 0 0 0 0.2rem rgba(196, 85, 37, 0.5);
 }
 
 .badge-secondary {
@@ -5479,17 +5479,17 @@ a.badge-dark:focus, a.badge-dark.focus {
 }
 
 .alert-primary {
-  color: #7f430e;
-  background-color: #fde6d1;
-  border-color: #fcdcbf;
+  color: #662c13;
+  background-color: #f3ddd3;
+  border-color: #eecfc2;
 }
 
 .alert-primary hr {
-  border-top-color: #fbcfa7;
+  border-top-color: #e8bfae;
 }
 
 .alert-primary .alert-link {
-  color: #512b09;
+  color: #3b190b;
 }
 
 .alert-secondary {
@@ -5633,7 +5633,7 @@ a.badge-dark:focus, a.badge-dark.focus {
   color: #fff;
   text-align: center;
   white-space: nowrap;
-  background-color: #f4811a;
+  background-color: #c45525;
   -webkit-transition: width 0.6s ease;
   transition: width 0.6s ease;
 }
@@ -5736,8 +5736,8 @@ a.badge-dark:focus, a.badge-dark.focus {
 .list-group-item.active {
   z-index: 2;
   color: #fff;
-  background-color: #f4811a;
-  border-color: #f4811a;
+  background-color: #c45525;
+  border-color: #c45525;
 }
 
 .list-group-horizontal {
@@ -5881,19 +5881,19 @@ a.badge-dark:focus, a.badge-dark.focus {
 }
 
 .list-group-item-primary {
-  color: #7f430e;
-  background-color: #fcdcbf;
+  color: #662c13;
+  background-color: #eecfc2;
 }
 
 .list-group-item-primary.list-group-item-action:hover, .list-group-item-primary.list-group-item-action:focus {
-  color: #7f430e;
-  background-color: #fbcfa7;
+  color: #662c13;
+  background-color: #e8bfae;
 }
 
 .list-group-item-primary.list-group-item-action.active {
   color: #fff;
-  background-color: #7f430e;
-  border-color: #7f430e;
+  background-color: #662c13;
+  border-color: #662c13;
 }
 
 .list-group-item-secondary {
@@ -6916,13 +6916,13 @@ a.close.disabled {
 }
 
 .bg-primary {
-  background-color: #f4811a !important;
+  background-color: #c45525 !important;
 }
 
 a.bg-primary:hover, a.bg-primary:focus,
 button.bg-primary:hover,
 button.bg-primary:focus {
-  background-color: #d1680a !important;
+  background-color: #99421d !important;
 }
 
 .bg-secondary {
@@ -7044,7 +7044,7 @@ button.bg-dark:focus {
 }
 
 .border-primary {
-  border-color: #f4811a !important;
+  border-color: #c45525 !important;
 }
 
 .border-secondary {
@@ -10373,11 +10373,11 @@ button.bg-dark:focus {
 }
 
 .text-primary {
-  color: #f4811a !important;
+  color: #c45525 !important;
 }
 
 a.text-primary:hover, a.text-primary:focus {
-  color: #b95c09 !important;
+  color: #843919 !important;
 }
 
 .text-secondary {
@@ -10574,7 +10574,7 @@ html {
 hr.divider {
   max-width: 3.25rem;
   border-width: 0.2rem;
-  border-color: #f4811a;
+  border-color: #c45525;
 }
 
 hr.light {
@@ -10586,7 +10586,7 @@ hr.light {
 }
 
 .btn-xl {
-  padding: 1.25rem 2.25rem;
+  padding: 0.75rem 1.25rem;
   font-size: 0.85rem;
   font-weight: 700;
   text-transform: uppercase;
@@ -10596,6 +10596,30 @@ hr.light {
 
 .page-section {
   padding: 8rem 0;
+}
+
+.autocomplete {
+  border-radius: 10rem;
+  border: none;
+  height: 2.25rem;
+  width: 50rem;
+  text-align: center;
+}
+
+.img-thumbnail {
+  padding: 0rem;
+  border-radius: .25rem;
+  max-width: 100%;
+  height: 60%;
+}
+
+.nutrigrade-thumb {
+  position: absolute;
+  top: 0;
+  right: 0;
+  padding: 0.5em 0.75em;
+  background: white;
+  border-radius: 100%;
 }
 
 #mainNav {
@@ -10621,18 +10645,18 @@ hr.light {
 }
 
 #mainNav .navbar-nav .nav-item .nav-link:hover, #mainNav .navbar-nav .nav-item .nav-link:active {
-  color: #f4811a;
+  color: #c45525;
 }
 
 #mainNav .navbar-nav .nav-item .nav-link.active {
-  color: #f4811a !important;
+  color: #c45525 !important;
 }
 
 @media (min-width: 992px) {
   #mainNav {
     -webkit-box-shadow: none;
     box-shadow: none;
-    background-color: transparent;
+    background-color: #c45525;
   }
   #mainNav .navbar-brand {
     color: rgba(255, 255, 255, 0.7);
@@ -10659,21 +10683,21 @@ hr.light {
     color: #212529;
   }
   #mainNav.navbar-scrolled .navbar-brand:hover {
-    color: #f4811a;
+    color: #c45525;
   }
   #mainNav.navbar-scrolled .navbar-nav .nav-item .nav-link {
     color: #212529;
   }
   #mainNav.navbar-scrolled .navbar-nav .nav-item .nav-link:hover {
-    color: #f4811a;
+    color: #c45525;
   }
 }
 
 header.masthead {
   padding-top: 10rem;
-  padding-bottom: calc(10rem - 72px);
-  background: -webkit-gradient(linear, left top, left bottom, from(rgba(133, 73, 45, 0.35)), to(rgba(133, 73, 45, 0.35))), url("../img/bg-masthead.jpg");
-  background: linear-gradient(to bottom, rgba(133, 73, 45, 0.35) 0%, rgba(133, 73, 45, 0.35) 100%), url("../img/bg-masthead.jpg");
+  padding-bottom: calc(10rem - 50px);
+  background: -webkit-gradient(linear, left top, left bottom, from(rgba(232, 167, 93, 0.2)), to(rgba(232, 167, 93, 0.2))), url("../img/bg-masthead.jpg");
+  background: linear-gradient(to bottom, rgba(232, 167, 93, 0.2) 0%, rgba(232, 167, 93, 0.2) 100%), url("../img/bg-masthead.jpg");
   background-position: center;
   background-repeat: no-repeat;
   background-attachment: scroll;
@@ -10688,7 +10712,7 @@ header.masthead h1 {
   header.masthead {
     height: 100vh;
     min-height: 40rem;
-    padding-top: 72px;
+    padding-top: 50px;
     padding-bottom: 0;
   }
   header.masthead p {
@@ -10735,7 +10759,7 @@ header.masthead h1 {
   text-align: center;
   opacity: 0;
   color: #fff;
-  background: rgba(244, 129, 26, 0.9);
+  background: rgba(196, 85, 37, 0.9);
   -webkit-transition: opacity 0.25s ease;
   transition: opacity 0.25s ease;
   text-align: center;
