--- a/purebutter/home/static/home/scss/_global.scss
+++ b/purebutter/home/static/home/scss/_global.scss
@@ -27,7 +27,7 @@ hr.light {
 }
 
 .btn-xl {
-  padding: 1.25rem 2.25rem;
+  padding: 0.75rem 1.25rem;
   font-size: 0.85rem;
   font-weight: 700;
   text-transform: uppercase;
@@ -38,4 +38,29 @@ hr.light {
 // Page section padding
 .page-section {
   padding: 8rem 0;
+}
+
+// Personal add
+.autocomplete {
+    border-radius: 10rem;
+    border: none;
+    height: 2.25rem;
+    width: 50rem;
+  text-align: center;
+}
+
+.img-thumbnail {
+    padding: 0rem;
+    border-radius: .25rem;
+    max-width: 100%;
+    height: 60%;
+}
+
+.nutrigrade-thumb {
+    position: absolute;
+    top: 0;
+    right: 0;
+    padding: 0.5em 0.75em;
+    background: white;
+    border-radius: 100%;
 }
