--- a/purebutter/home/templates/home/index.html
+++ b/purebutter/home/templates/home/index.html
@@ -21,7 +21,6 @@
   <!-- Plugin CSS -->
   <link href="https://code.jquery.com/ui/1.10.4/themes/ui-lightness/jquery-ui.css" rel="stylesheet">
   <link href="{% static 'home/vendor/magnific-popup/magnific-popup.css' %}" rel="stylesheet">
-  <link href="{% static 'home/css/purebutter.css' %}" rel="stylesheet">
 
   <!-- Theme CSS - Includes Bootstrap -->
   <link href="{%  static 'home/css/creative.min.css' %}" rel="stylesheet">
@@ -35,21 +34,30 @@
   <nav class="navbar navbar-expand-lg navbar-light fixed-top py-3" id="mainNav">
     <div class="container">
         <!-- LOGO -->
-      <a class="navbar-brand js-scroll-trigger" href="#page-top">Pur Beurre</a>
+      <a class="navbar-brand js-scroll-trigger" href="{% url 'home' %}#page-top">Pur Beurre</a>
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto my-2 my-lg-0">
-          <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="">Mon compte</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="">Mes aliments</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="">Déconnexion</a>
-          </li>
+           {% if user.is_authenticated %}
+               <li class="nav-item">
+                   <a class="nav-link js-scroll-trigger" href="">Mon compte</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link js-scroll-trigger" href="{% url 'fav_list' %}">Mes aliments</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link js-scroll-trigger" href="{% url 'logout' %}">Déconnexion</a>
+              </li>
+            {% else %}
+                <li class="nav-item">
+                    <a class="nav-link js-scroll-trigger" href="{% url 'login' %}">Se connecter</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link js-scroll-trigger" href="{% url 'signin' %}">S'inscrire</a>
+                </li>
+            {% endif %}
         </ul>
       </div>
     </div>
@@ -58,26 +66,27 @@
 
 
   <!-- Masthead -->
-  <header class="masthead" style="{% block background %}{% endblock %}">
+  <header class="masthead" style="{% block masthead_background %}{% endblock %}">
     <div class="container h-100">
       <div class="row h-100 align-items-center justify-content-center text-center">
         <div class="col-lg-10 align-center">
           {% block homeblock %}
-          <h1 class="text-uppercase text-white font-weight-bold">Du gras, oui, mais de qualité !</h1>
+          <h1 class="text-uppercase text-white font-weight-bold">{% block masthead_title %}Du gras, oui, mais de qualité !{% endblock %}</h1>
           <hr class="divider my-4">
           {% endblock %}
         </div>
-        {% block form %}
+
         <div class="col-lg-12 align-self-baseline">
-          <p class="text-white-75 font-weight-light mb-5">Trouvez un produit de substitution pour ceux que vous consommez tout les jours.</p>
+            {% block formulary %}
+          <p class="text-white-75 font-weight-light mb-5">Trouvez un produit de substitution pour ceux que vous consommez tous les jours.</p>
              <form action="{% url "search" %}" method="post">
                  {% csrf_token %}
                  {{ form }}
                  <input type="submit" class="btn btn-primary btn-xl js-scroll-trigger" value="Chercher">
              </form>
-
-        </div>
             {% endblock %}
+        </div>
+
         </div>
       </div>
   </header>
@@ -85,18 +94,25 @@
 
   <!-- About Section -->
   <section class="page-section bg-primary" id="about">
-      {% block content %}
         <div class="container">
-          <div class="row justify-content-center">
-            <div class="col-lg-8 text-center">
-              <h2 class="text-white mt-0">Colette et Remy</h2>
-              <hr class="divider light my-4">
-              <p class="text-white-50 mb-4">Blablablablablabla</p>
-              <a class="btn btn-light btn-xl js-scroll-trigger" href="#services">Get Started!</a>
-            </div>
-          </div>
+            {% block content %}
+              <div class="row justify-content-center">
+                <div class="col-lg-12 text-center">
+                  <h2 class="text-white mt-0">Colette et Remy</h2>
+                  <hr class="divider light my-4">
+                    <div class="row justify-content-center">
+                        <div class="col-lg-6 text-center">
+                            <p class="text-white-50 mb-4">Colette est une amoureuse de cuisine qui mange beaucoup trop, il semblerait
+                            qu'elle soit compulsive, et addict au bio</p>
+                        </div>
+                        <div class="col-lg-6 text-center">
+                            <p class="text-white-50 mb-4">Remy est un rat, c'est étrange en cuisine mais il s'en sort quand même, promis !</p>
+                        </div>
+                    </div>
+                </div>
+              </div>
+            {% endblock %}
         </div>
-      {% endblock %}
   </section>
 
 
