--- a/purebutter/home/templates/home/index.html
+++ b/purebutter/home/templates/home/index.html
@@ -15,8 +15,8 @@
   <link href="{% static 'home/vendor/fontawesome-free/css/all.min.css' %}" rel="stylesheet" type="text/css">
 
   <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css?family=Merriweather+Sans:400,700" rel="stylesheet">
-  <link href='https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic' rel='stylesheet' type='text/css'>
+  <link href="http://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet" type="text/css">
+  <link href="http://fonts.googleapis.com/css?family=Scope+One" rel="stylesheet" type="text/css">
 
   <!-- Plugin CSS -->
   <link href="https://code.jquery.com/ui/1.10.4/themes/ui-lightness/jquery-ui.css" rel="stylesheet">
@@ -69,7 +69,7 @@
   <header class="masthead" style="{% block masthead_background %}{% endblock %}">
     <div class="container h-100">
       <div class="row h-100 align-items-center justify-content-center text-center">
-        <div class="col-lg-10 align-center">
+        <div class="col-lg-10 align-self-end">
           {% block homeblock %}
           <h1 class="text-uppercase text-white font-weight-bold">{% block masthead_title %}Du gras, oui, mais de qualité !{% endblock %}</h1>
           <hr class="divider my-4">
@@ -101,11 +101,11 @@
                   <h2 class="text-white mt-0">Colette et Remy</h2>
                   <hr class="divider light my-4">
                     <div class="row justify-content-center">
-                        <div class="col-lg-6 text-center">
+                        <div class="col-lg-6 col-sm-12 text-center">
                             <p class="text-white-50 mb-4">Colette est une amoureuse de cuisine qui mange beaucoup trop, il semblerait
                             qu'elle soit compulsive, et addict au bio</p>
                         </div>
-                        <div class="col-lg-6 text-center">
+                        <div class="col-lg-6 col-sm-12 text-center">
                             <p class="text-white-50 mb-4">Remy est un rat, c'est étrange en cuisine mais il s'en sort quand même, promis !</p>
                         </div>
                     </div>
