--- a/purebutter/favorite/templates/favorite/favorite_page.html
+++ b/purebutter/favorite/templates/favorite/favorite_page.html
@@ -1,17 +1,18 @@
-<!DOCTYPE html>
-<html lang="fr">
-<head>
-    <meta charset="UTF-8">
-    <title>Favorite page</title>
-</head>
-<body>
-    {% for favorite in all_favorites %}
-        <img src="{{ favorite.to_substitute.thumb_link }}" height="200px" width="150px">
-        <a href = {% url "product" favorite.to_substitute.id %}>{{ favorite.to_substitute.name }}</a>
-        RPL PAR
-        <a href = {% url "product" favorite.substitution.id %}>{{ favorite.substitution.name }}</a>
-        <img src="{{ favorite.substitution.thumb_link }}" height="200px" width="150px">
-        <br>
-    {% endfor %}
-</body>
-</html>
+{% extends 'products/product_substitute.html' %}
+{% block masthead_title %}Aliments pour {{ user.email }}{% endblock %}
+{% block content %}
+    <div class="row align-content-center">
+            {% for favorite in all_favorites %}
+                {% with substitute=favorite.substitution %}
+                <div class="col-md-4 col-12 text-center sub_proposition">
+                    <a href="{% url 'product' substitute.id %}"><img src="{{ substitute.thumb_link }}" class="img-thumbnail"></a>
+                    <p class="nutrigrade-thumb">{{ substitute.nutrition_grade | upper }}</p>
+                    <p class="text-white-75">{{ substitute.name | truncatechars:32 }}</p>
+                </div>
+                {% endwith %}
+            {% endfor %}
+            {% block save_content %}{% endblock %}
+    </div>
+{% endblock %}
+
+<!-- TODO: Setup a prettier page -->
