Template's integration on its way

--- a/purebutter/favorite/templates/favorite/favorite_page.html
+++ b/purebutter/favorite/templates/favorite/favorite_page.html
@@ -1,4 +1,5 @@
 {% extends 'products/product_substitute.html' %}
+{% block title %} Aliments enregistrés {% endblock %}
 {% block masthead_title %}Aliments pour {{ user.email }}{% endblock %}
 {% block content %}
     <div class="row align-content-center">
