--- a/purebutter/home/templates/home/index.html
+++ b/purebutter/home/templates/home/index.html
@@ -9,7 +9,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>{% block title %}SomeTest{% endblock %}</title>
+  <title>{% block title %}Pur Beurre !{% endblock %}</title>
 
   <!-- Font Awesome Icons -->
   <link href="{% static 'home/vendor/fontawesome-free/css/all.min.css' %}" rel="stylesheet" type="text/css">
