--- a/purebutter/home/templates/home/index.html
+++ b/purebutter/home/templates/home/index.html
@@ -34,7 +34,7 @@
   <nav class="navbar navbar-expand-lg navbar-light fixed-top py-3" id="mainNav">
     <div class="container">
         <!-- LOGO -->
-      <a class="navbar-brand js-scroll-trigger" href="{% url 'home' %}#page-top">Pur Beurre</a>
+      <a class="navbar-brand js-scroll-trigger" href="{% url 'home' %}#page-top"><img class="nav-link" src="{% static 'home/img/carrot.svg' %}" height="100%" width="100%"></a>
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -42,7 +42,7 @@
         <ul class="navbar-nav ml-auto my-2 my-lg-0">
            {% if user.is_authenticated %}
                <li class="nav-item">
-                   <a class="nav-link js-scroll-trigger" href="">Mon compte</a>
+                   <a class="nav-link js-scroll-trigger" href="{% url 'profile' %}">Mon compte</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link js-scroll-trigger" href="{% url 'fav_list' %}">Mes aliments</a>
