--- a/purebutter/products/templates/products/product.html
+++ b/purebutter/products/templates/products/product.html
@@ -1,7 +1,7 @@
 {% extends "home/index.html" %}
 {% block title %} {{ prod.name }} {% endblock %}
 {% block masthead_background %}
-    background-image:url({{ prod.thumb_link }});background-color:black;background-repeat:no-repeat;background-size:contain
+    background-image:url({{ prod.full_image }});background-color:black;background-repeat:no-repeat;background-size:contain
 {% endblock %}
 
 {% block masthead_title %}
