--- a/purebutter/home/templates/home/index.html
+++ b/purebutter/home/templates/home/index.html
@@ -10,6 +10,7 @@
   <meta name="author" content="">
 
   <title>{% block title %}Pur Beurre !{% endblock %}</title>
+  <link href="{% static 'home/img/favicon_pur_beurre.png' %}" rel="shortcut icon">
 
   <!-- Font Awesome Icons -->
   <link href="{% static 'home/vendor/fontawesome-free/css/all.min.css' %}" rel="stylesheet" type="text/css">
@@ -34,28 +35,35 @@
   <nav class="navbar navbar-expand-lg navbar-light fixed-top py-3" id="mainNav">
     <div class="container">
         <!-- LOGO -->
-      <a class="navbar-brand js-scroll-trigger" href="{% url 'home' %}#page-top"><img class="nav-link" src="{% static 'home/img/carrot.svg' %}" height="100%" width="100%"></a>
+      <a class="navbar-brand js-scroll-trigger" href="{% url 'home' %}#page-top"><img src="{% static 'home/img/logo_pur_beurre.png' %}" height="30%" width="30%"> </a>
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto my-2 my-lg-0">
+            <li class="nav-item">
+             <form action="{% url "search" %}" method="post">
+                 {% csrf_token %}
+                 <input type="text" class="autocomplete" name="research">
+                 <input type="submit" hidden="true">
+             </form>
+            </li>
            {% if user.is_authenticated %}
                <li class="nav-item">
-                   <a class="nav-link js-scroll-trigger" href="{% url 'profile' %}">Mon compte</a>
+                   <a class="nav-link js-scroll-trigger" href="{% url 'profile' %}" title="Profil utilisateur"><i class="fas fa-address-card fa-3x"></i></a>
               </li>
               <li class="nav-item">
-                <a class="nav-link js-scroll-trigger" href="{% url 'fav_list' %}">Mes aliments</a>
+                <a class="nav-link js-scroll-trigger" href="{% url 'fav_list' %}" title="Mes aliments"><i class="fas fa-carrot fa-3x"></i></a>
               </li>
               <li class="nav-item">
-                <a class="nav-link js-scroll-trigger" href="{% url 'logout' %}">Déconnexion</a>
+                <a class="nav-link js-scroll-trigger" href="{% url 'logout' %}" title="Déconnexion"><i class="fas fa-sign-out-alt fa-3x"></i></a>
               </li>
             {% else %}
                 <li class="nav-item">
-                    <a class="nav-link js-scroll-trigger" href="{% url 'login' %}">Se connecter</a>
+                    <a class="nav-link js-scroll-trigger" href="{% url 'login' %}" title="Connexion"><i class="fas fa-sign-in-alt fa-3x"></i></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link js-scroll-trigger" href="{% url 'signin' %}">S'inscrire</a>
+                    <a class="nav-link js-scroll-trigger" href="{% url 'signin' %}" title="Créer un compte"><i class="fas fa-user-plus fa-3x"></i></a>
                 </li>
             {% endif %}
         </ul>
@@ -81,7 +89,7 @@
           <p class="text-white-75 font-weight-light mb-5">Trouvez un produit de substitution pour ceux que vous consommez tous les jours.</p>
              <form action="{% url "search" %}" method="post">
                  {% csrf_token %}
-                 {{ form }}
+                 {{ main_form }}
                  <input type="submit" class="btn btn-primary btn-xl js-scroll-trigger" value="Chercher">
              </form>
             {% endblock %}
