Fixed some design details

--- a/purebutter/products/templates/products/product_substitute.html
+++ b/purebutter/products/templates/products/product_substitute.html
@@ -15,6 +15,7 @@
                         <input type="hidden" name="to_substitute" value="{{ prod.id }}">
                         <input type="hidden" name="substitution" value="{{ substitute.id }}">
                         <input type="submit" name="Save" value="Save in favorites">
+                     <!-- TODO: Add floppy disk icon -->
                      </form>
 
                 {% endif %}
