--- a/purebutter/home/templates/home/index.html
+++ b/purebutter/home/templates/home/index.html
@@ -32,6 +32,7 @@
 
   <!-- Navigation -->
   {% block navbar %}
+      <!-- TODO: See for logo reduction for responsivness -->
   <nav class="navbar navbar-expand-lg navbar-light fixed-top py-3" id="mainNav">
     <div class="container">
         <!-- LOGO -->
@@ -46,6 +47,7 @@
                  {% csrf_token %}
                  <input type="text" class="autocomplete" name="research">
                  <input type="submit" hidden="true">
+                 <!-- TODO:Lighter search bar -->
              </form>
             </li>
            {% if user.is_authenticated %}
@@ -110,10 +112,12 @@
                   <hr class="divider light my-4">
                     <div class="row justify-content-center">
                         <div class="col-lg-6 col-sm-12 text-center">
+                            <!-- TODO: Photo Colette -->
                             <p class="text-white-50 mb-4">Colette est une amoureuse de cuisine qui mange beaucoup trop, il semblerait
                             qu'elle soit compulsive, et addict au bio</p>
                         </div>
                         <div class="col-lg-6 col-sm-12 text-center">
+                            <!-- TODO: Photo Remy -->
                             <p class="text-white-50 mb-4">Remy est un rat, c'est étrange en cuisine mais il s'en sort quand même, promis !</p>
                         </div>
                     </div>
@@ -143,7 +147,7 @@
         <div class="col-lg-4 mr-auto text-center">
           <i class="fas fa-envelope fa-3x mb-3 text-muted"></i>
           <!-- Make sure to change the email address in anchor text AND the link below! -->
-          <a class="d-block" href="mailto:contact@yourwebsite.com">contact@yourwebsite.com</a>
+          <a class="d-block" href="mailto:contact@yourwebsite.com">contact@purbeurre.fr</a>
         </div>
       </div>
     </div>
