--- a/purebutter/products/templates/products/product.html
+++ b/purebutter/products/templates/products/product.html
@@ -12,8 +12,11 @@
 
 {% block content %}
     <div class="row">
-        <p class="text-white-75 col-lg-6 align-content-lg-start">Note nutritionnelle : {{ prod.nutrition_grade.capitalize }}</p>
+        <p class="text-white-75 col-lg-6 align-content-lg-start">
+            <img src="https://static.openfoodfacts.org/images/misc/nutriscore-{{ prod.nutrition_grade }}.svg"
+        </p>
         <p class="text-white-75 col-lg-6 align-content-lg-end">Catégorie : {{ prod.clean_category }}</p>
+        <!-- TODO: Repères nutritionnels pour 100g -->
     </div>
     <div class="row justify-content-center" >
         <a class="btn btn-light btn-xl" href="{{ prod.url }}" style="margin-top: 5rem;padding:0.5rem 8rem;">Consulter sur OpenFoodFacts</a>
