--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -173,7 +173,10 @@
   <!-- Footer -->
   <footer class="bg-light py-5">
     <div class="container">
-      <div class="small text-center text-muted">Copyright &copy; 2019 - Start Bootstrap</div>
+      <div class="row justify-content-between">
+          <div class="col-12 col-md-2"><a href="https://www.freeprivacypolicy.com/privacy/view/2e50b976bfeda2c2f43df969a7b468ba">Mentions légales</a></div>
+          <div class="col-12 col-md-2"><a href="{% url 'home' %}#contact">Contact</a></div>
+      </div>
     </div>
   </footer>
 
