--- a/home/static/home/css/creative.css
+++ b/home/static/home/css/creative.css
@@ -10645,6 +10645,10 @@ hr.light {
   border: none;
 }
 
+label {
+  color: white;
+}
+
 #mainNav {
   -webkit-box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
   box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
