--- a/user/templates/user/signin.html
+++ b/user/templates/user/signin.html
@@ -1,10 +1,16 @@
 {% extends "home/index.html" %}
-    {% block title %} Créer un compte {% endblock %}
+    {% block title %} Inscription {% endblock %}
     {% block masthead_title %} Inscription {% endblock %}
     {% block formulary %}
+        {% if duplicate_email %}
+            <strong class="text-white-75">Ce compte existe déjà, veuillez en saisir un nouveau ou
+                bien <a href="{% url 'login' %}"> connectez-vous ici</a></strong>
+        {% endif %}
         <form action="{% url 'signin' %}" method="post">
             {% csrf_token %}
             {{ form.as_p }}
-            <input class="btn btn-light" type="submit" value="Créer un compte" />
+            <input class="btn btn-primary btn-xl" type="submit" value="Créer un compte" />
         </form>
+        <br>
+        <a href="{% url 'login' %}"><input class="btn btn-primary btn-xl" type="button" value="J'ai déjà un compte" /></a>
     {% endblock %}
